# tap-postgres_testconn

./: .meltano.yml.swm  .meltano.yml.swp  .pre-commit-config.yaml  .pyproject.toml.swp  README.md  meltano.yml  pyproject.toml  test.py  test2.py
tap_postgres_testconn/: .streams.py.svw  .streams.py.swb  .streams.py.swc  .streams.py.swd  .streams.py.swe  .streams.py.swf  .streams.py.swg  .streams.py.swh  .streams.py.swi  .streams.py.swj  .streams.py.swk  .streams.py.swl  .streams.py.swm  .streams.py.swn  .streams.py.swo  .streams.py.swp  .tap.py.swp  __init__.py  __main__.py  client.py  conversion.py  globals.py  streams.py  streams.py_org  streams.py_runnning  streams.py_withoutonedaylogic  tap.py  test3.py
tests/: test_core.py
